--- a/miwoomago/templates/miwoomago/main.html
+++ b/miwoomago/templates/miwoomago/main.html
@@ -27,7 +27,10 @@
   }
 
   .left_body {
-    {#background-color: skyblue;#}
+      {
+      #background-color: skyblue;
+      #
+    }
 
     margin-right: 100px;
     width: 500px;
@@ -37,7 +40,10 @@
   }
 
   .right_body {
-      {#background-color: yellow;#}
+      {
+      #background-color: yellow;
+      #
+    }
 
     padding-top: 20px;
     width: 300px;
@@ -170,7 +176,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -213,7 +219,7 @@
       <div>
         <span class="material-icons">home</span>
         <span class="material-icons">send</span>
-        <span class="material-icons-outlined">add_box</span>
+        <span id="add_feed" class="material-icons-outlined">add_box</span>
         <span class="material-icons-outlined">explore</span>
         <span class="material-icons-outlined">favorite_border</span>
       </div>
@@ -369,6 +375,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
     crossorigin="anonymous"></script>
+  <script>
+    const modal = document.getElementById("modal_add_feed");
+    const buttonAddFeed = document.getElementById("add_feed");
+    buttonAddFeed.addEventListener("click", e => {
+      modal.style.display = "flex";
+    });
+  </script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
