--- a/miwoomago/templates/miwoomago/main.html
+++ b/miwoomago/templates/miwoomago/main.html
@@ -14,6 +14,10 @@
   <link
     href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
     rel="stylesheet">
+  <!-- jquery 사용하기 위해 -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+
 
   <title>여기에 진스타그램 만들꺼임 </title>
 </head>
@@ -196,17 +200,38 @@
     position: relative;
     padding: 10px;
   }
+
+  .modal_title {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    font-weight: bold;
+    font-size: 20px;
+  }
+
+  .modal_title_side {
+    flex: 0 0 40px;
+    text-align: center;
+  }
 </style>
 
 <body>
   <!-- test -->
 
   <!--modal-->
-  <div class="modal_overlay">
+  <div id="modal_add_feed" class="modal_overlay">
     <div class="modal_window">
+      <div class="modal_title">
+        <div class="modal_title_side"></div>
+        <div> 새 게시물 </div>
+        <div class="modal_title_side">
+          <span id="close_modal" class="material-icons-outlined">
+            close
+          </span>
+        </div>
+      </div>
     </div>
   </div>
-
 
 
   <!-- 상단 내비게이션 바 -->
@@ -373,15 +398,75 @@
 
   <!-- Option 1: Bootstrap Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
-    crossorigin="anonymous"></script>
+    integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous">
+  </script>
+  
   <script>
+    // 모달 띄우기 코드
     const modal = document.getElementById("modal_add_feed");
     const buttonAddFeed = document.getElementById("add_feed");
     buttonAddFeed.addEventListener("click", e => {
-      modal.style.display = "flex";
+        modal.style.top = window.pageYOffset + 'px'; // top을 이용해 시작 y위치를 바꿔줌 
+        modal.style.display = "flex";
+        document.body.style.overflowY = "hidden"; // 스크롤 없애기
     });
-  </script>
+
+    // 모달 닫기 코드
+    const buttonCloseModal = document.getElementById("close_modal");
+    buttonCloseModal.addEventListener("click", e => {
+        modal.style.display = "none";
+        document.body.style.overflowY = "visible";
+    });
+
+    //jquery 부분
+
+    $('.modal_image_upload')
+        .on("dragover", dragOver)
+        .on("dragleave", dragOver)
+        .on("drop", uploadFiles);
+
+    function dragOver(e){
+        e.stopPropagation();
+        e.preventDefault();
+        
+        if (e.type == "dragover") {
+            $(e.target).css({
+                "background-color": "black",
+                "outline-offset": "-20px"
+            });
+        } else {
+            $(e.target).css({
+                "background-color": "white",
+                "outline-offset": "-10px"
+            });
+        }
+    }
+
+    function uploadFiles(e){
+        e.stopPropagation();
+        e.preventDefault();
+        
+        e.dataTransfer = e.originalEvent.dataTransfer; 
+        var files =  e.dataTransfer.files;
+
+        if (files.length > 1) {
+            alert('하나만 올려라.');
+            return;
+        }
+
+        if (files[0].type.match(/image.*/)) {
+            $(e.target).css({
+                "background-image": "url(" + window.URL.createObjectURL(files[0]) + ")",
+                "outline": "none",
+                "background-size": "100% 100%"});
+        }else{
+            alert('이미지가 아닙니다.');
+            return;
+        }
+
+    }
+
+</script>
 
   <!-- Option 2: Separate Popper and Bootstrap JS -->
   <!--
